chore: add eslint to the project

--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
   "engines": {
     "atom": "*"
   },
+  "scripts": {
+    "lint": "eslint . --fix",
+    "test.lint": "eslint ."
+  },
   "dependencies": {
     "binary-search": "^1.3.3",
     "etch": "0.9.3",
@@ -38,8 +42,9 @@
     "underscore-plus": "1.x"
   },
   "devDependencies": {
-    "coffeelint": "^1.9.7",
-    "dedent": "^0.6.0"
+    "dedent": "^0.6.0",
+    "eslint": "7",
+    "eslint-config-atomic": "^1.18.1"
   },
   "consumedServices": {
     "atom.file-icons": {
