--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,21 @@ jobs:
         channel: [stable, beta]
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v1
-    - uses: UziTech/action-setup-atom@v2
-      with:
-        version: ${{ matrix.channel }}
-    - name: Install dependencies
-      run: apm install
-    - name: Run tests
-      run: atom --test spec
+      - uses: actions/checkout@v1
+      - uses: UziTech/action-setup-atom@v2
+        with:
+          version: ${{ matrix.channel }}
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 6
+
+      - name: Install dependencies
+        run: apm install
+
+      - name: Lint
+        run: pnpm run test.lint
+
+      - name: Run tests
+        run: atom --test spec
