--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,8 @@
     "no-promise-executor-return": "off",
     "no-unreachable-loop": "off",
     "no-useless-backreference": "off",
-    "default-case-last": "off"
+    "default-case-last": "off",
+    // errors
+    "no-undef": "error"
   }
 }
